--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 #header{padding:10px 0;
 		:#bae9ff;
-		background-image:url("https://pixabay.com/images/id-2729413/");
+		background-image:url("#");
 		 background-attachment:fixed;
 		 background-repeat: no-repeat;
     	 background-position: top center;
@@ -96,6 +96,12 @@ ul.nav.navbar-nav.navbar-left {
 
 .right-contact li:first-child{margin-right:15px;}
 
+body {
+  background-image: url('https://pixabay.com/images/id-2729413/');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 
 
 /*----------------------------------header end------------------------------------------*/
