--- a/style.css
+++ b/style.css
@@ -7,14 +7,7 @@
 
 
 #header{padding:10px 0;
-		:#bae9ff;
-		background-image:url("#");
-		 background-attachment:fixed;
-		 background-repeat: no-repeat;
-    	 background-position: top center;
-    	 background-size: cover;
-		width:100% !important;
-		z-index:9999999;}
+		:#bae9ff;}
 		
 header#header.affix {
     background: skyblue;
