--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ ul.nav.navbar-nav.navbar-left {
 .right-contact li:first-child{margin-right:15px;}
 
 body {
-  background-image: url('https://pixabay.com/images/id-2729413/');
+  background-image: url('images/bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
